# kx7m2p9q

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: d5cf70b8577c_create_sensors_and_measurements_tables.py
app/: main.py
app/api/routes/: measurements.py  sensors.py
app/models/: measurement.py  sensor.py
app/schemas/: measurement.py  sensor.py
app/services/: measurement_service.py  sensor_service.py
tests/: conftest.py  test_api.py
